# er-fog-vizu

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  build_with_demo.py  fog-vizu.nginx.conf  fog-vizu.service  index.html  requirements.txt  serve.sh  server.py
.github/workflows/: build-mod.yml
data/: demo_log.txt
docs/: SPEC_BACKEND.md  SPEC_FOG_VIZU_INTEGRATION.md  SPEC_FRONTEND_EVOLUTION.md
js/: exploration.js  firebase.js  graph.js  main.js  parser.js  ui.js
mod/: .gitignore  Cargo.toml  README.md  build.rs  route_tracker_config.toml
mod/src/: config.rs  coordinate_transformer.rs  custom_pointers.rs  goods_events.rs  injector.rs  lib.rs  route.rs  tracker.rs  ui.rs  websocket.rs  zone_names.rs
server/: .env.example  README.md  alembic.ini  fog-vizu.nginx.conf  fog-vizu.service  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 20241215_000000_initial_schema.py  20241215_000001_add_avatar_url.py
server/fogvizu/: __init__.py  auth.py  config.py  database.py  game_logic.py  main.py  models.py  websocket.py
server/fogvizu/api/: __init__.py  auth.py  games.py  users.py
src/: index.html
src/data/: demo_log.txt
src/js/: exploration.js  graph.js  main.js  parser.js  state.js  sync.js  toast.js  ui.js
src/styles/: main.css
styles/: main.css
web/: index.html
web/js/: api.js  auth.js  exploration.js  graph.js  main.js  parser.js  router.js  state.js  sync.js  ui.js
web/js/pages/: dashboard.js  landing.js  viewer-list.js
web/styles/: main.css
