[package]
name = "route-tracking"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your@email.com>"]
license = "AGPL-3.0"
description = "Route tracking mod for Elden Ring"
repository = "https://github.com/YOUR_USERNAME/route-tracking"

[lib]
crate-type = ["cdylib"]
name = "route_tracking"

[[bin]]
name = "route-tracker-injector"
path = "src/injector.rs"

# =============================================================================
# DEPENDENCIES
# =============================================================================

[dependencies]
# --- libeldenring from your fork ---
# IMPORTANT: Replace YOUR_USERNAME with your GitHub username
# after forking https://github.com/veeenu/eldenring-practice-tool
libeldenring = { git = "https://github.com/Sully-/eldenring-practice-tool.git", branch = "main" }

# --- hudhook for ImGui overlay (includes imgui as transitive dependency) ---
hudhook = { version = "0.7.0", features = ["dx12", "inject"], default-features = false }

# --- Utilities ---
once_cell = "1.19.0"
parking_lot = "0.12.1"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# --- Windows API ---
[dependencies.windows]
version = "0.54.0"
features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_System_Memory",
]

[profile.release]
strip = "symbols"
lto = true

